--- a/package.json
+++ b/package.json
@@ -6,13 +6,15 @@
     "dev": "nuxt",
     "build": "nuxt build",
     "start": "nuxt start",
-    "generate": "nuxt generate"
+    "generate": "nuxt generate",
+    "deploy": "push-dir --dir=dist --branch=gh-pages --cleanup"
   },
   "dependencies": {
     "core-js": "^3.6.5",
     "nuxt": "^2.14.6"
   },
   "devDependencies": {
+    "push-dir": "^0.4.1",
     "sass": "^1.30.0",
     "sass-loader": "^10.1.0"
   }
